crates/rondo-tui/tests/snapshots/snapshots__analytics_plugin_page.snap
---
source: crates/rondo-tui/tests/snapshots.rs
expression: s
---
" ▌rondo v0.1.0                 // SISTEMA DE GESTIÓN DE TAREAS AVANZADO //                                ⊙ RO · HH:MM:SS · ◷ 1/2 · P— · ☑3 "
"┌─ navegación ───────────┐┏━ inbox · 3 tareas ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌─ detail · #4 ──────────────────────── pending · urg! ─┐"
"│  [i] ◉ I┌ 🧩 builtin.analytics ────────────────────────────────────────────────────────────────────────────────────────────────┐         │" Hidden by multi-width symbols: [(13, " ")]
"│  [t] ◷ H│┌─ vista general ────┐┌─ próximas 7 días ──────────────┐┌─ distribución por tag ─────────┐┌─ sincronización ─────────┐│         │"
"│  [p] ⏵ P││                    ││    1    1    1                 ││   work      ▰▰▰▱▱▱▱▱▱▱   2 (33 ││  ESTADO     Conectado    ││         │"
"│  [A] ◇ T││   4  TOTAL         ││    ██   ██   ██                ││   (sin tag) ▰▱▱▱▱▱▱▱▱▱   1 (16 ││  ÚLTIMA     HH:MM:SS     ││         │"
"└─────────││                    ││    ██   ██   ██                ││   backend   ▰▱▱▱▱▱▱▱▱▱   1 (16 ││  PRÓXIMA    HH:MM:SS     ││━━━━━━   │"
"┌─ filtros││   ◑    1  Completa ││    ██   ██   ██                ││   personal  ▰▱▱▱▱▱▱▱▱▱   1 (16 ││  DISPOSIT.  1/1 local    ││         │"
"│  [u] ! U││   ◐    1  En progr ││    ██   ██   ██                ││   refactor  ▰▱▱▱▱▱▱▱▱▱   1 (16 ││                          ││         │"
"│  [H] ↑ A││   ○    2  Pendient ││    ██   ██   ██                ││                                ││         ⌬                ││         │"
"│  [o] ⌧ V││   !    0  Vencidas ││    ██   ██   ██                ││                                ││                          ││         │"
"│  [P] ◐ E││                    ││    ██   ██   ██                ││                                ││                          ││         │"
"│  [n] # S││                    ││    ██   ██   ██                ││                                ││                          ││──────   │"
"│  [c] ✓ C││                    ││    ██   ██   ██                ││                                ││                          ││         │"
"│         ││                    ││    ██   ██   ██                ││                                ││                          ││         │"
"│         ││                    ││    ██   ██   ██                ││                                ││                          ││         │"
"│         ││                    ││    ██   ██   ██                ││                                ││                          ││         │"
"│         ││                    ││    ██   ██   ██                ││                                ││                          ││         │"
"│         ││                    ││    ██   ██   ██                ││                                ││                          ││──────   │"
"│         ││                    ││    ██   ██   ██                ││                                ││                          ││         │"
"│         ││                    ││    ██   ██   ██                ││                                ││                          ││         │"
"│         ││                    ││    ██   ██   ██                ││                                ││                          ││──────   │"
"│         ││                    ││    ██   ██   ██                ││                                ││                          ││         │"
"│         ││                    ││    ██   ██   ██                ││                                ││                          ││         │"
"│         ││                    ││    ██   ██   ██                ││                                ││                          ││──────   │"
"└─────────││                    ││    ██   ██   ██                ││                                ││                          ││─────────┘"
"┌─ vista g││                    ││    ██   ██   ██                ││                                ││                          ││─────────┐"
"│         ││                    ││    ██   ██   ██                ││                                ││                          ││ctado    │"
"│   4  TOT││                    ││   17   18   19   20   21   22  ││                                ││                          ││H:MM     │"
"│         ││                    ││                                ││                                ││                          ││H:MM     │"
"│   ◑    1│└────────────────────┘└────────────────────────────────┘└────────────────────────────────┘└──────────────────────────┘│local    │"
"│   ◐    1│ Esc cerrar                                                                                                           │         │"
"│   ○    2│                                                                                                                      │         │"
"│   !    0└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘         │"
"└────────────────────┘└────────────────────────────────┘└──────────────────────────────────────────────────────┘└──────────────────────────┘"
" [NOR]  [a → add] [space → status] [A → + subtarea] [B → + dep] [v → select]  · ? more                                                      "
