crates/rondo-tui/tests/snapshots/snapshots__calendar_plugin_page.snap
---
source: crates/rondo-tui/tests/snapshots.rs
expression: s
---
" ▌rondo v0.1.0                 // SISTEMA DE GESTIÓN DE TAREAS AVANZADO //                                ⊙ RO · HH:MM:SS · ◷ 1/2 · P— · ☑3 "
"┌─ navegación ───────────┐┏━ inbox · 3 tareas · default (status, priority, due) ━━┓┌─ detail · #4 ──────────────────────── pending · urg! ─┐"
"│  [i] ◉ I┌ 🧩 builtin.calendar ─────────────────────────────────────────────────────────────────────────────────────────────────┐         │" Hidden by multi-width symbols: [(13, " ")]
"│  [t] ◷ H│(no view returned)                                                                                                    │         │"
"│  [p] ⏵ P│                                                                                                                      │         │"
"│  [A] ◇ T│ Esc cerrar  h/j/k/l navegar                                                                                          │         │"
"└─────────│                                                                                                                      │━━━━━━   │"
"┌─ filtros│                                                                                                                      │         │"
"│  [u] ! U│                                                                                                                      │         │"
"│  [H] ↑ A│                                                                                                                      │         │"
"│  [o] ⌧ V│                                                                                                                      │         │"
"│  [P] ◐ E│                                                                                                                      │         │"
"│  [n] # S│                                                                                                                      │──────   │"
"│  [c] ✓ C│                                                                                                                      │         │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │──────   │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │──────   │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │──────   │"
"└─────────│                                                                                                                      │─────────┘"
"┌─ vista g│                                                                                                                      │─────────┐"
"│         │                                                                                                                      │ctado    │"
"│   4  TOT│                                                                                                                      │H:MM     │"
"│         │                                                                                                                      │H:MM     │"
"│   ◑    1│                                                                                                                      │local    │"
"│   ◐    1│                                                                                                                      │         │"
"│   ○    2│                                                                                                                      │         │"
"│   !    0└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘         │"
"└────────────────────┘└────────────────────────────────┘└──────────────────────────────────────────────────────┘└──────────────────────────┘"
" [NOR]  [a → add] [space → status] [A → + subtarea] [B → + dep] [v → select]  · ? more                                                      "
