crates/rondo-tui/tests/snapshots/snapshots__command_palette.snap
---
source: crates/rondo-tui/tests/snapshots.rs
expression: s
---
" ▌rondo v0.1.0       // SISTEMA DE GESTIÓN DE TAREAS AVANZADO //                  ⊙ ONLINE · 14:19:05 · ◷ 1/2 · P— · ☑3 "
"┌─ navegación ───────┐┏━ tasks · 4 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"   ◉ INBOX       3      ▌ ▌ ○  Refactor pomodoro module   ◖URG◗   ◖in 1d◗   blocked   #refactor #work                   "
"   ◷ HOY         1        ▏ ○  Buy groceries   ◖low◗   ◖in 2d◗   #personal                                              "
"   ⏵ PRÓXIMAS    2        ▍ ◐  Review API spec   ◖high◗   ◖today◗   ◔ 1/5   #backend #work                              "
"   ⛀ PROYECTOS   4        ▎ ✓  Deploy v2.1   ◖med◗   ◖overdue◗                                                          "
"   ◆ ETIQUETAS   4                                                                                                      "
"   ⊟ CALENDARIO                                                                                                         "
"   ▤ ANÁLISIS                                                                                                           "
"   ⌬ GRAFO                                                                                                              "
"   ⊳ AUTOMAT.                                                                                                           "
"   ✕ PAPELERA                                                                                                           "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  ┌ : command ───────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"└─│ › p▏                                                                                                             │  "
"┌─│  pomodoro   start focus session overlay                                                                          │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"└────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
" [INS]  [Enter → run] [Tab → complete] [Esc → cancel]  · ? more                                                         "
