crates/rondo-tui/tests/snapshots/snapshots__dep_graph_plugin_page.snap
---
source: crates/rondo-tui/tests/snapshots.rs
expression: s
---
" ▌rondo v0.1.0                 // SISTEMA DE GESTIÓN DE TAREAS AVANZADO //                            ⊙ ONLINE · HH:MM:SS · ◷ 1/2 · P— · ☑3 "
"┌─ navegación ───────────┐┏━ inbox · 3 tareas ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┌─ detail · #4 ──────────────────────── pending · urg! ─┐"
"│  [i] ◉ I┌ 🧩 builtin.dep-graph ────────────────────────────────────────────────────────────────────────────────────────────────┐         │" Hidden by multi-width symbols: [(13, " ")]
"│  [t] ◷ H│Dependencies                                                                                                          │         │"
"│  [p] ⏵ P│                                                                                                                      │         │"
"│  [A] ◇ T│#4 Refactor pomodoro module                                                                                           │         │"
"└─────────│  ↳ #1 Review API spec                                                                                                │━━━━━━   │"
"┌─ filtros│                                                                                                                      │         │"
"│  [u] ! U│ Esc cerrar  h/j/k/l navegar                                                                                          │         │"
"│  [H] ↑ A│                                                                                                                      │         │"
"│  [o] ⌧ V│                                                                                                                      │         │"
"│  [n] # S│                                                                                                                      │         │"
"│  [c] ✓ C│                                                                                                                      │──────   │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │──────   │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │──────   │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │         │"
"│         │                                                                                                                      │──────   │"
"└─────────│                                                                                                                      │─────────┘"
"┌─ vista g│                                                                                                                      │─────────┐"
"│         │                                                                                                                      │ctado    │"
"│   4  TOT│                                                                                                                      │H:MM     │"
"│         │                                                                                                                      │H:MM     │"
"│   ◑    1│                                                                                                                      │local    │"
"│   ◐    1│                                                                                                                      │         │"
"│   ○    2│                                                                                                                      │         │"
"│   !    0└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘         │"
"└────────────────────┘└────────────────────────────────┘└──────────────────────────────────────────────────────┘└──────────────────────────┘"
" [NOR]  [a → add] [A → + subtarea] [B → + dep] [v → select] [f<l> → filtro]  · ? more                                                       "
