crates/rondo-tui/tests/snapshots/snapshots__detail_focused_subtasks_section.snap
---
source: crates/rondo-tui/tests/snapshots.rs
expression: s
---
" ▌rondo v0.1.0       // SISTEMA DE GESTIÓN DE TAREAS AVANZADO //                      ⊙ RO · HH:MM:SS · ◷ 1/2 · P— · ☑3 "
"┌─ navegación ───────────┐┏━ detail · #1 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ inprogress · high ━┓"
"│  [i] ◉ INBOX       3   │┃                                                                                            ┃"
"│  [t] ◷ HOY         1   │┃   TSK-0001    ◖high◗   ◖in-progress◗                                                       ┃"
"│  [p] ⏵ PRÓXIMAS    2   │┃                                                                                            ┃"
"│  [A] ◇ TODAS       4   │┃   Review API spec                                                                          ┃"
"└────────────────────────┘┃   ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━   ┃"
"┌─ filtros rápidos ──────┐┃                                                                                            ┃"
"│  [u] ! URGENTES    1   │┃   CREADA    2026-05-17 HH:MM                                                               ┃"
"│  [H] ↑ ALTA PRIO   2   │┃   VENCE     ◖today◗   2026-05-17 (Sunday)                                                  ┃"
"│  [o] ⌧ VENCIDAS        │┃   TAGS      #backend  ·  #work                                                             ┃"
"│  [P] ◐ EN PROGRESO 1   │┃   OWNER     me                                                                             ┃"
"│  [n] # SIN ETIQUETA 1  │┃                                                                                            ┃"
"│  [c] ✓ COMPLETADAS 1   │┃ ▌ § DESCRIPCIÓN ────────────────────────────────────────────────────────────────────────   ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃     Goals                                                                                  ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃     Check RFC #42 for the new auth flow.                                                   ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃                                                                                            ┃"
"└────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┌─ vista general ────┐┌─ próximas 7 días ──────────────┐┌─ distribución por tag ───────────┐┌─ sincronización ─────────┐"
"│                    ││    1    1    1                 ││   work      ▰▰▰▱▱▱▱▱▱▱▱▱   2 (33 ││  ESTADO     Conectado    │"
"│   4  TOTAL         ││    ██   ██   ██                ││   (sin tag) ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││  ÚLTIMA     HH:MM:SS     │"
"│                    ││    ██   ██   ██                ││   backend   ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││  PRÓXIMA    HH:MM:SS     │"
"│   ◑    1  Completa ││    ██   ██   ██                ││   personal  ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││  DISPOSIT.  1/1 local    │"
"│   ◐    1  En progr ││    ██   ██   ██                ││   refactor  ▰▱▱▱▱▱▱▱▱▱▱▱   1 (16 ││                          │"
"│   ○    2  Pendient ││   17   18   19   20   21   22  ││                                  ││         ⌬                │"
"│   !    0  Vencidas ││                                ││                                  ││                          │"
"└────────────────────┘└────────────────────────────────┘└──────────────────────────────────┘└──────────────────────────┘"
" [NOR]  [A → + subtarea] [e → rename] [d → delete] [space → check] [1/2/3/4 → section jump]  · ? more                   "
