crates/rondo-tui/tests/snapshots/snapshots__empty_tasks.snap
---
source: crates/rondo-tui/tests/snapshots.rs
expression: s
---
" ▌rondo v0.1.0       // SISTEMA DE GESTIÓN DE TAREAS AVANZADO //                  ⊙ ONLINE · HH:MM:SS · ◷ 0/0 · P— · ☑0 "
"┌─ navegación ───────────┐┏━ inbox · 0 tareas ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"│  [i] ◉ INBOX           │┃                                                                                            ┃"
"│  [t] ◷ HOY             │┃                                                                                            ┃"
"│  [p] ⏵ PRÓXIMAS        │┃   Sin tareas para 'inbox'                                                                  ┃"
"│  [A] ◇ TODAS           │┃                                                                                            ┃"
"└────────────────────────┘┃   h cambiar filtro    ? ayuda                                                              ┃"
"┌─ filtros rápidos ──────┐┃                                                                                            ┃"
"│  [u] ! URGENTES        │┃                                                                                            ┃"
"│  [H] ↑ ALTA PRIO       │┃                                                                                            ┃"
"│  [o] ⌧ VENCIDAS        │┃                                                                                            ┃"
"│  [n] # SIN ETIQUETA    │┃                                                                                            ┃"
"│  [c] ✓ COMPLETADAS     │┃                                                                                            ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃                                                                                            ┃"
"│                        │┃                                                                                            ┃"
"└────────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┌─ vista general ────┐┌─ próximas 7 días ──────────────┐┌─ distribución por tag ───────────┐┌─ sincronización ─────────┐"
"│                    ││                                ││                                  ││  ESTADO     Conectado    │"
"│   0  TOTAL         ││                                ││                                  ││  ÚLTIMA     HH:MM:SS     │"
"│                    ││                                ││                                  ││  PRÓXIMA    HH:MM:SS     │"
"│   ◑    0  Completa ││                                ││                                  ││  DISPOSIT.  1/1 local    │"
"│   ◐    0  En progr ││                                ││                                  ││                          │"
"│   ○    0  Pendient ││   17   18   19   20   21   22  ││                                  ││         ⌬                │"
"│   !    0  Vencidas ││                                ││                                  ││                          │"
"└────────────────────┘└────────────────────────────────┘└──────────────────────────────────┘└──────────────────────────┘"
" [NOR]  [a → add] [A → + subtarea] [B → + dep] [v → select] [f<l> → filtro]  · ? more                                   "
